fixed margin overflowing dots

--- a/src/components/Boxes/SmallMateClassBox/SmallMateClassBox.module.css
+++ b/src/components/Boxes/SmallMateClassBox/SmallMateClassBox.module.css
@@ -52,12 +52,12 @@ h5 {
 .room {
     font-size: 20px;
     font-weight: 500;
-    margin: 0 10px;
+    margin: 0 20px;
 }
 
 .subjectAndTeacher {
     font-size: 16px;
     font-weight: 300;
     line-height: 1.4;
-    margin: 0 10px;
+    margin: 0 20px;
 }
